# TESE

./: .gitignore  GUI_pista.py  manual_control.py
install/: local_setup.sh  setup.sh
install/ackermann_mux/include/ackermann_mux/: ackermann_mux.hpp  ackermann_mux_diagnostics.hpp  ackermann_mux_diagnostics_status.hpp  params_helpers.hpp  topic_handle.hpp  utils.hpp
install/ackermann_mux/lib/ackermann_mux/: ackermann_mux
install/ackermann_mux/share/ackermann_mux/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/asio_cmake_module/share/asio_cmake_module/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dwa_follower/lib/dwa_follower/: dwa_follower_node  dwa_global_follower  dwa_spline_follower
install/dwa_follower/share/dwa_follower/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/f1tenth_stack/lib/f1tenth_stack/: keyboard_teleop
install/f1tenth_stack/share/f1tenth_stack/: package.sh  package.xml
install/io_context/include/io_context/: common.hpp  io_context.hpp
install/io_context/include/msg_converters/: converters.hpp  std_msgs.hpp  udp_msgs.hpp
install/io_context/share/io_context/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/lbfgspp/share/lbfgspp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/mpc_python/lib/mpc_python/: mpc_controller
install/mpc_python/share/mpc_python/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/obstacle_publisher/lib/obstacle_publisher/: obstacle_publisher_node
install/obstacle_publisher/share/obstacle_publisher/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/osqp-eigen/lib/: libOsqpEigen.so.0.10.0
install/osqp-eigen/share/osqp-eigen/: package.ps1  package.sh
install/osqp/share/osqp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/pickup_description/lib/pickup_description/: marker_publisher  mov_robot_model  q_path_publisher  rounded_rectangle_marker_publisher
install/pickup_description/share/pickup_description/: package.bash  package.sh  package.zsh
install/serial_driver/include/serial_driver/: serial_bridge_node.hpp  serial_driver.hpp  serial_port.hpp  visibility_control.hpp
install/serial_driver/lib/serial_driver/: serial_bridge
install/serial_driver/share/serial_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/udp_driver/include/udp_driver/: udp_driver.hpp  (+4 more)
log/: latest_build
src/dwa_follower/: CMakeLists.txt
src/dwa_follower/src/: dwa_follower.cpp  dwa_global_follower.cpp  dwa_spline_follower.cpp
src/mpc_python/: package.xml  setup.cfg  setup.py
src/mpc_python/mpc_python/: mpc_controller.py
src/obstacle_publisher/: CMakeLists.txt  package.xml
src/obstacle_publisher/src/: obstacle_publisher.cpp
src/obstacle_publisher/src/install/: local_setup.sh  setup.sh
src/obstacle_publisher/src/log/: latest_build
src/pickup_description/: package.xml  setup.cfg  setup.py
src/pickup_description/config/: display.rviz  splines.yaml
src/pickup_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/pickup_description/launch/: display.launch.py  launch_rounded_rectangle.launch.py  robot.launch.py  set_pose.launch.py  spline.launch.py
src/pickup_description/log/: latest_build
src/pickup_description/maps/: map.yaml
src/pickup_description/pickup_description/: mov_robot_model.py  q_path_publisher.py  rounded_rectangle_marker_publisher.py
src/pickup_description/urdf/: pickup.urdf
src/spline_visualizer/: CMakeLists.txt  package.xml
src/spline_visualizer/src/: spline_visualizer.cpp
view_frames/: frames_2025-05-19_17.09.29.gv
(+293 files in other folders)
